--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 <body>
     <div class="mytitle">
-        <h1>인생 최고의 명작 모음</h1>
+        <h1>인생 최고의 명작 모음 뻑킹</h1>
         <button>영화 기록하기</button>
 
     </div>
